--- a/index2.html
+++ b/index2.html
@@ -20,36 +20,36 @@
 </head>
 <body class="font-nunito w-screen">
     <header class="flex flex-auto basis-full fixed p-4 top-1 z-30 w-screen">
-                <a href="index.html" class="w-2/3 flex space-x-3 align-middle" title="Free Stock Photos">
+                <a href="index.html" class="pl-4 w-3/4 flex space-x-3 align-middle" title="Free Stock Photos">
                     <div><img src="Pexels/logo.png" width="35px" height="35px"></div>
                     <div class="sm:hidden lg:block lg:text-lg lg:font-bold lg:text-white">Tella</div>
                 </a>
-                <div class="sm:hidden xl:w-5/12 xl:flex xl:pr-3">
+                <div class="sm:hidden xl:w-4/12 2xl:w-3/12 xl:flex 2xl:pr-3">
                     <div class="xl:flex xl:text-white xl:space-x-7 xl:text-xl">
                         <a href="#" class="xl:hover:text-gray-400">Explore</a>
                         <a href="#" class="xl:hover:text-gray-400">Licence</a>
                         <a href="#" class="xl:hover:text-gray-400">Upload</a>
                     </div>
-                    <div class="group xl:ml-5 xl:relative">
+                    <div class="group xl:ml-auto xl:relative ">
                         <svg class="xl:fill-white"xmlns="http://www.w3.org/2000/svg" width="35" height="35" viewBox="0 0 24 24"><path d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"></path></svg>            
-                        <div class="hidden xl:right-0 xl:absolute xl:w-80 group-hover:block xl:border xl:rounded-lg xl:bg-gray-100 xl:text-left xl:shadow-gray-100/50 xl:text-base xl:text-black">
+                        <div class="font-bold hidden xl:right-0 xl:absolute xl:w-80 group-hover:block xl:border xl:rounded xl:bg-gray-100 xl:text-left xl:shadow-gray-100/50 xl:text-base xl:text-black py-4">
                             <a class="xl:p-2 block hover:bg-gray-300" href="#">Login</a>
                             <a class="xl:p-2 block hover:bg-gray-300" href="#">Join</a>
-                            <div class="flex">
-                            <a class="p-2 block hover:bg-gray-300" href="#">Change Language</a>
-                                <div><img  src="Pexels/usa.png" alt="usa" width="36px" height="26px"></div>
+                            <div class="w-full">
+                            <a class="p-2 hover:bg-gray-300 flex w-full" href="#">Change Language
+                                <img src="Pexels/usa.png" alt="usa" width="36px" height="26px"></a>
                             </div>
                             <a class="p-2 block hover:bg-gray-300" href="#">Image & Video APi</a>
                             <a class="p-2 block hover:bg-gray-300" href="#">Apps & Plugins</a>
                             <a class="p-2 block hover:bg-gray-300" href="#">FAQ</a>
                             <a class="p-2 block hover:bg-gray-300" href="#">Partnerships</a>
                             <a class="p-2 block hover:bg-gray-300" href="#">Imprint & Terms</a>
-                            <div class="flex justify-between text-center align-middle">
-                                <a class="w-1/2 h-10 hover:bg-gray-500 hover:text-white" href="#"><i class="fa fa-facebook-f"></i></a>
-                                <a class="w-1/2 h-10 hover:bg-gray-500 hover:text-white" href="#"><i class="fa fa-twitter"></i></a>
-                                <a class="w-1/2 h-10 hover:bg-gray-500 hover:text-white" href="#"><i class="fa fa-instagram"></i></a>
-                                <a class="w-1/2 h-10 hover:bg-gray-500 hover:text-white" href="#"><i class="fa fa-whatsapp"></i></a>
-                                <a class="w-1/2 h-10 hover:bg-gray-500 hover:text-white" ="#"><i class="fa fa-youtube-play"></i></a>
+                            <div class="flex justify-between text-center align-middle p-2">
+                                <a class="w-1/2 p-2 hover:bg-gray-500 hover:text-white rounded" href="#"><i class="fa fa-facebook-f"></i></a>
+                                <a class="w-1/2 p-2 hover:bg-gray-500 hover:text-white rounded" href="#"><i class="fa fa-twitter"></i></a>
+                                <a class="w-1/2 p-2 hover:bg-gray-500 hover:text-white rounded" href="#"><i class="fa fa-instagram"></i></a>
+                                <a class="w-1/2 p-2 hover:bg-gray-500 hover:text-white rounded" href="#"><i class="fa fa-whatsapp"></i></a>
+                                <a class="w-1/2 p-2 hover:bg-gray-500 hover:text-white rounded" href="#"><i class="fa fa-youtube-play"></i></a>
                             </div>
                         </div>
                     </div>
@@ -102,25 +102,25 @@
                 </div>
     </header>
     <div class="relative">        
-        <div class="sm:h-97 sm:w-screen sm:object-cover xl:w-full">
-            <img  class="sm:h-97 xl:w-full" src="Pexels/hero.jpeg" alt="sea">
+        <div class="sm:h-97 sm:w-screen sm:object-cover xl:w-full 2xl:h-100">
+            <img  class="sm:h-97 xl:w-full 2xl:h-full" src="Pexels/hero.jpeg" alt="sea">
         </div>
-        <section class="absolute xl:top-44 xl:left-1/4 xl:w-5/12 sm:top-24 sm:left-0 sm:w-11/12 sm:ml-3">
-            <h1 class="text-4xl text-white font-bold mb-4 sm:text-3xl">The best free stock photos, 
+        <section class="absolute 2xl:top-44 xl:left-1/4 xl:w-5/12 sm:top-24 sm:left-0 sm:w-11/12 sm:ml-3 md:mx-7 lg:mx-10 xl:top-32 lg:left-44 lg:w-3/6 2xl:w-6/12">
+            <h1 class="2xl:text-[43px] 2xl:leading-[3.5rem] text-4xl text-white font-bold mb-4 sm:text-3xl">The best free stock photos, 
             royalty free images & videos shared by creators.</h1>
             <div class="relative">
                 <input autocapitalize="none" autocomplete="off" class="w-full h-14 rounded-2xl pl-4 bg-gray-50/80 sm:" name="s" placeholder="Search for free photos" required="required" type="search" value="">
                 <i class="fa fa-search absolute right-4 top-3 text-2xl"></i>
             </div>        
-            <p class="text-white text-base sm:text-base">Suggested <span style="color: rgb(247, 247, 247);">fantasy, corporate, security, fashion model, hiking, industry, more</span></p>
+            <p class="text-white text-base sm:text-base 2xl:text-xl">Suggested <span style="color: rgb(247, 247, 247);">fantasy, corporate, security, fashion model, hiking, industry, more</span></p>
         </section>
-        <section class="xl:absolute xl:right-14 xl:top-97 xl:font-bold xl:italic xl:text-lg">
+        <section class="xl:absolute xl:right-14 xl:top-97 xl:font-bold xl:italic xl:text-lg 2xl:top-[600px]">
             <h3 style="color: rgba(255, 255, 255, 0.712);">Photo By Tella</h3>
         </section>
     </div>
     <main class="mt-0 relative">
-        <div class="font-semibold text-lg text-center space-x-12 py-4 border-b-2 sm:block sm:overflow-y-hidden sm:overflow-x-auto sm:whitespace-nowrap">
-            <a href="#" class="text-blue-700 border-b-4 border-blue-700 rounded-sm pb-4 sm:ml-3">Home</a>
+        <div class="font-semibold text-lg text-center space-x-12 py-4 border-b-2 sm:block sm:overflow-y-hidden sm:overflow-x-auto sm:whitespace-nowrap 2xl:text-xl 2xl:font-extrabold">
+            <a href="#" class="text-blue-700 border-b-4 border-blue-700 rounded-sm pb-4 sm:ml-3 2xl:pb-3 px-4">Home</a>
             <a href="#" class="hover:text-blue-700">Discover</a>
             <a href="#" class="hover:text-blue-700">Videos</a>
             <a href="#" class="hover:text-blue-700">Leaderboard</a>
@@ -133,7 +133,7 @@
                 <i class="fa fa-caret-down"></i>
             </div>
         </div>
-        <div class="xl:flex mx-16 gap-4 sm:hidden">
+        <div class="xl:flex mx-16 gap-4 sm:hidden 2xl:hidden">
             <div class="w-1/3 space-y-4">
                 <img src="Pexels/1.jfif" alt="1">
                 <img src="Pexels/2.jpg" alt="2">
@@ -165,8 +165,8 @@
                 <img src="Pexels/24.jpg" alt="24">
             </div>
         </div>
-        <div class="sm:visible sm:mx-4 flex sm:flex-col sm:basis-full xl:hidden md:flex-row md:space-x-4">
-            <div class="sm:space-y-4 md:w-2/4 md:h-30">
+        <div class="2xl:hidden sm:visible sm:mx-4 flex sm:flex-col sm:basis-full xl:hidden md:flex-row md:space-x-4">
+            <div class="sm:space-y-4 md:w-2/4 md:h-30 2xl:w-1/4 ">
                 <img class="w-full " src="Pexels/1.jfif" alt="1">
                 <img class="w-full" src="Pexels/2.jpg" alt="2">
                 <img class="w-full " src="Pexels/3.jpg" alt="3">
@@ -179,7 +179,7 @@
                 <img class="w-full " src="Pexels/16.jpg" alt="16">
                 <img class="w-full " src="Pexels/17.jpg" alt="17">
             </div>
-            <div class="sm:space-y-4 md:w-2/4">
+            <div class="sm:space-y-4 md:w-2/4 2xl:w-1/4">
                 <img class="w-full " src="Pexels/7.jfif" alt="7">
                 <img class="w-full " src="Pexels/8.jfif" alt="8">
                 <img class="w-full " src="Pexels/10.jpg" alt="10">
@@ -195,7 +195,32 @@
                 <img class="w-full " src="Pexels/24.jpg" alt="24">
             </div>
         </div>
-
+        <div class="2xl:grid sm:hidden flex xl:hidden md:hidden grid-cols-4 mx-10 gap-4 grid-flow-row-dense">
+                <img class="w-full h-[640px]" src="Pexels/1.jfif" alt="1">
+                <img class="w-full h-[640px]" src="Pexels/2.jpg" alt="2">
+                <img class="w-full h-[640px]" src="Pexels/3.jpg" alt="3">
+                <img class="w-full h-[640px] " src="Pexels/4.jfif" alt="4">
+                <img class="w-full h-[640px] " src="Pexels/6.jpg" alt="6">
+                <img class="w-full h-[640px] " src="Pexels/19.jpg" alt="19">
+                <img class="w-full h-[640px] " src="Pexels/14.jpg" alt="14">
+                <img class="w-full h-[640px] " src="Pexels/13.jpg" alt="13">
+                <img class="w-full h-[640px] " src="Pexels/15.jpg" alt="15">
+                <img class="w-full h-[640px] " src="Pexels/16.jpg" alt="16">
+                <img class="w-full h-[640px] " src="Pexels/17.jpg" alt="17">
+                <img class="w-full h-[640px] " src="Pexels/7.jfif" alt="7">
+                <img class="w-full h-[640px] " src="Pexels/8.jfif" alt="8">
+                <img class="w-full h-[640px] " src="Pexels/10.jpg" alt="10">
+                <img class="w-full h-[640px] " src="Pexels/11.jfif" alt="11">
+                <img class="w-full h-[640px] " src="Pexels/12.jpg" alt="12">
+                <img class="w-full h-[640px] " src="Pexels/22.jpg" alt="22">
+                <img class="w-full h-[640px] " src="Pexels/5.jfif" alt="5">
+                <img class="w-full h-[640px] " src="Pexels/18.jfif" alt="18">
+                <img class="w-full h-[640px] " src="Pexels/21.jpg" alt="21">
+                <img class="w-full h-[640px] " src="Pexels/20.png" alt="20">
+                <img class="w-full h-[640px] " src="Pexels/23.jpg" alt="23">
+                <img class="w-full h-[640px] " src="Pexels/9.jpg" alt="9">
+                <img class="w-full h-[640px] " src="Pexels/24.jpg" alt="24">
+        </div>
     </main>
 </body>
 </html>
